lib/type/static/testdata/errors/send_missing_method.lua
-- Calling a method that doesn't exist on a concrete table.
local t = { foo = 1 }
t:bar()
