lib/type/static/testdata/errors/send_missing_method.expected
test.lua:3:2: error: no method 'bar' on type '{ foo: integer }'
  3 | t:bar()
       ^
